--- a/oscilator.css
+++ b/oscilator.css
@@ -1,13 +1,21 @@
 input[type=range][orient=vertical]
 {
     writing-mode: bt-lr; /* IE */
-    -webkit-appearance: slider-vertical; /* WebKit */
-    width: 8px;
-    height: 80px;
+    /*-webkit-appearance: slider-vertical; /* WebKit */
+    width: 80px;
+    height: 8px;
     padding: 0 5px;
+    transform: rotate(-90deg);
+    transform-origin: 75px 5px;
+    -webkit-appearance: none;
+    background-color: #EEE;
 }
 .slider {
     width: 300px;
+    -webkit-appearance: none;
+    height: 8px;
+    margin: 10px;
+    background-color: #EEE;
 }
 .container {
     margin:10px;
