--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,9 +3,7 @@
   <h1>
     {{ title }}!
   </h1>
+  <button (click)="addOscilator()" #addOsc>OSC ++</button>
 </div>
-<ul>
-  <li>
-    <osc-component></osc-component>
-  </li>
-</ul>
+<div class="container">
+</div>
