--- a/src/app/synth/osc.component.html
+++ b/src/app/synth/osc.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div #osc class="container">
     <div class="containerFrequency">
         <input #sliderFrequency
             (mousemove)="handleFrequency($event)"
