clean app-component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,9 @@
-<!--The content below is only a placeholder and can be replaced.-->
 <div handlekeys style="text-align:center">
   <h1>
     {{ title }}!
   </h1>
   <button (click)="addOscilator()" #addOsc>OSC ++</button>
 </div>
-<div class="container" handleKeys>
+<div class="container">
 </div>
 <div>Oscs: {{ oscsCount }}</div>
