phase looked loop

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,5 +5,11 @@
   <button (click)="addOscilator()" #addOsc>OSC ++</button>
 </div>
 <div class="container">
+    <input #sliderTempo
+    (mousemove)="handleTempo($event)"
+    class="slider sliderTempo"
+    type="range" min="60" max="300" step="1" value="120">
+
 </div>
+<span>{{ renderBeats() }}</span>
 <div>Oscs: {{ oscsCount }}</div>
